--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bughuntrai.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BugHuntr.ai | Audit your Smart Contracts with AI</title>
+    <title>BugScout.ai | Audit your Smart Contracts with AI</title>
   </head>
   <body>
     <div id="app"></div>
